--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "driver.js": "^1.3.1",
+    "framer-motion": "^11.2.11",
     "lucide-react": "^0.316.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
